--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
                     <li><a href="#home" class="nav-link">Home</a></li>
                     <li><a href="#how-it-works" class="nav-link">How it Works</a></li>
                     <li><a href="#platforms" class="nav-link">Platforms</a></li>
+                    <li><a href="dashboard.html" class="nav-link">Dashboard</a></li>
                     <li><a href="login.html" class="nav-link">Sign In</a></li>
                     <li><a href="register.html" class="nav-link cta-nav">Sign Up</a></li>
                 </ul>
