✨ Add all 15 platforms to home page with brand colors and animations
- Added Kick, Website Traffic, and Reviews platforms
- Enhanced platform cards with authentic brand colors
- Added floating logo animations for all 15 platforms
- Updated JavaScript platform mapping for new platforms
- Improved platform section styling and interactions
- Updated platform count to reflect 15+ platforms

--- a/dashboard.html
+++ b/dashboard.html
@@ -37,7 +37,7 @@
                 <a href="index.html" class="nav-link">Home</a>
                 <a href="dashboard.html" class="nav-link active">Dashboard</a>
                 <div class="user-profile">
-                    <img src="https://via.placeholder.com/40x40" alt="User" class="profile-avatar">
+                    <img src="https://images.unsplash.com/photo-1472099645785-5658abf4ff4e?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=100&h=100&q=80" alt="User" class="profile-avatar">
                     <span class="profile-name">John Doe</span>
                     <button class="logout-btn">
                         <i class="fas fa-sign-out-alt"></i>
@@ -75,42 +75,176 @@
                         <i class="fab fa-instagram"></i>
                     </div>
                     <h3>Instagram</h3>
-                    <p>Grow your followers and engagement</p>
+                    <p>Followers • Likes • Comments • Views</p>
+                    <div class="platform-stats">
+                        <span class="stat-item">📈 High Engagement</span>
+                        <span class="stat-item">⚡ Fast Delivery</span>
+                    </div>
                 </div>
                 <div class="platform-card" data-platform="tiktok">
                     <div class="platform-icon">
                         <i class="fab fa-tiktok"></i>
                     </div>
                     <h3>TikTok</h3>
-                    <p>Viral videos and massive reach</p>
+                    <p>Followers • Likes • Views • Shares</p>
+                    <div class="platform-stats">
+                        <span class="stat-item">🔥 Viral Potential</span>
+                        <span class="stat-item">🎯 Targeted Growth</span>
+                    </div>
                 </div>
                 <div class="platform-card" data-platform="youtube">
                     <div class="platform-icon">
                         <i class="fab fa-youtube"></i>
                     </div>
                     <h3>YouTube</h3>
-                    <p>Subscribers and watch time</p>
+                    <p>Subscribers • Views • Watch Time • Likes</p>
+                    <div class="platform-stats">
+                        <span class="stat-item">💎 Premium Quality</span>
+                        <span class="stat-item">📊 Analytics Boost</span>
+                    </div>
                 </div>
                 <div class="platform-card" data-platform="twitter">
                     <div class="platform-icon">
                         <i class="fab fa-twitter"></i>
                     </div>
                     <h3>Twitter</h3>
-                    <p>Build your following and influence</p>
+                    <p>Followers • Likes • Retweets • Impressions</p>
+                    <div class="platform-stats">
+                        <span class="stat-item">🌍 Global Reach</span>
+                        <span class="stat-item">💬 Real Engagement</span>
+                    </div>
                 </div>
                 <div class="platform-card" data-platform="linkedin">
                     <div class="platform-icon">
                         <i class="fab fa-linkedin"></i>
                     </div>
                     <h3>LinkedIn</h3>
-                    <p>Professional network growth</p>
+                    <p>Connections • Followers • Post Engagement</p>
+                    <div class="platform-stats">
+                        <span class="stat-item">💼 Professional Network</span>
+                        <span class="stat-item">🎯 B2B Growth</span>
+                    </div>
                 </div>
                 <div class="platform-card" data-platform="facebook">
                     <div class="platform-icon">
                         <i class="fab fa-facebook"></i>
                     </div>
                     <h3>Facebook</h3>
-                    <p>Pages and group engagement</p>
+                    <p>Page Likes • Followers • Post Engagement</p>
+                    <div class="platform-stats">
+                        <span class="stat-item">👥 Community Building</span>
+                        <span class="stat-item">📢 Brand Awareness</span>
+                    </div>
+                </div>
+                <div class="platform-card" data-platform="snapchat">
+                    <div class="platform-icon">
+                        <i class="fab fa-snapchat"></i>
+                    </div>
+                    <h3>Snapchat</h3>
+                    <p>Followers • Story Views • Snap Score</p>
+                    <div class="platform-stats">
+                        <span class="stat-item">👻 Gen Z Audience</span>
+                        <span class="stat-item">📱 Mobile First</span>
+                    </div>
+                </div>
+                <div class="platform-card" data-platform="pinterest">
+                    <div class="platform-icon">
+                        <i class="fab fa-pinterest"></i>
+                    </div>
+                    <h3>Pinterest</h3>
+                    <p>Followers • Monthly Views • Saves • Clicks</p>
+                    <div class="platform-stats">
+                        <span class="stat-item">🛍️ Shopping Intent</span>
+                        <span class="stat-item">🎨 Creative Content</span>
+                    </div>
+                </div>
+                <div class="platform-card" data-platform="reddit">
+                    <div class="platform-icon">
+                        <i class="fab fa-reddit"></i>
+                    </div>
+                    <h3>Reddit</h3>
+                    <p>Karma • Upvotes • Comments • Awards</p>
+                    <div class="platform-stats">
+                        <span class="stat-item">🧠 Thought Leadership</span>
+                        <span class="stat-item">💡 Community Driven</span>
+                    </div>
+                </div>
+                <div class="platform-card" data-platform="discord">
+                    <div class="platform-icon">
+                        <i class="fab fa-discord"></i>
+                    </div>
+                    <h3>Discord</h3>
+                    <p>Server Members • Active Users • Engagement</p>
+                    <div class="platform-stats">
+                        <span class="stat-item">🎮 Gaming Community</span>
+                        <span class="stat-item">💬 Real-time Chat</span>
+                    </div>
+                </div>
+                <div class="platform-card" data-platform="telegram">
+                    <div class="platform-icon">
+                        <i class="fab fa-telegram"></i>
+                    </div>
+                    <h3>Telegram</h3>
+                    <p>Channel Subscribers • Group Members • Views</p>
+                    <div class="platform-stats">
+                        <span class="stat-item">🔒 Private Community</span>
+                        <span class="stat-item">🚀 Instant Messaging</span>
+                    </div>
+                </div>
+                <div class="platform-card" data-platform="spotify">
+                    <div class="platform-icon">
+                        <i class="fab fa-spotify"></i>
+                    </div>
+                    <h3>Spotify</h3>
+                    <p>Followers • Plays • Monthly Listeners</p>
+                    <div class="platform-stats">
+                        <span class="stat-item">🎵 Music Discovery</span>
+                        <span class="stat-item">📈 Playlist Growth</span>
+                    </div>
+                </div>
+                <div class="platform-card" data-platform="soundcloud">
+                    <div class="platform-icon">
+                        <i class="fab fa-soundcloud"></i>
+                    </div>
+                    <h3>SoundCloud</h3>
+                    <p>Followers • Plays • Likes • Reposts</p>
+                    <div class="platform-stats">
+                        <span class="stat-item">🎧 Independent Artists</span>
+                        <span class="stat-item">🔊 Audio Content</span>
+                    </div>
+                </div>
+                <div class="platform-card" data-platform="twitch">
+                    <div class="platform-icon">
+                        <i class="fab fa-twitch"></i>
+                    </div>
+                    <h3>Twitch</h3>
+                    <p>Followers • Viewers • Channel Views</p>
+                    <div class="platform-stats">
+                        <span class="stat-item">🎮 Live Streaming</span>
+                        <span class="stat-item">👾 Gaming Community</span>
+                    </div>
+                </div>
+                <div class="platform-card" data-platform="clubhouse">
+                    <div class="platform-icon">
+                        <i class="fas fa-microphone"></i>
+                    </div>
+                    <h3>Clubhouse</h3>
+                    <p>Followers • Room Attendance • Engagement</p>
+                    <div class="platform-stats">
+                        <span class="stat-item">🎙️ Audio Social</span>
+                        <span class="stat-item">🗣️ Live Conversations</span>
+                    </div>
+                </div>
+                <div class="platform-card" data-platform="onlyfans">
+                    <div class="platform-icon">
+                        <i class="fas fa-crown"></i>
+                    </div>
+                    <h3>OnlyFans</h3>
+                    <p>Subscribers • Likes • Tips • Views</p>
+                    <div class="platform-stats">
+                        <span class="stat-item">💎 Premium Content</span>
+                        <span class="stat-item">💰 Monetization</span>
+                    </div>
                 </div>
             </div>
         </section>
