--- a/index.html
+++ b/index.html
@@ -66,6 +66,11 @@
             <div class="floating-logo logo-8"><i class="fab fa-discord"></i></div>
             <div class="floating-logo logo-9"><i class="fab fa-telegram"></i></div>
             <div class="floating-logo logo-10"><i class="fab fa-twitch"></i></div>
+            <div class="floating-logo logo-11"><i class="fab fa-snapchat"></i></div>
+            <div class="floating-logo logo-12"><i class="fab fa-google"></i></div>
+            <div class="floating-logo logo-13"><i class="fas fa-gamepad"></i></div>
+            <div class="floating-logo logo-14"><i class="fas fa-globe-americas"></i></div>
+            <div class="floating-logo logo-15"><i class="fas fa-star"></i></div>
         </div>
 
         <div class="hero-content">
@@ -147,7 +152,7 @@
                     </div>
                     <div class="step-content">
                         <h3>Choose a Platform</h3>
-                        <p>Select from Instagram, TikTok, YouTube, and 13+ other platforms</p>
+                        <p>Select from Instagram, TikTok, YouTube, and 12+ other platforms</p>
                     </div>
                     <div class="step-glow"></div>
                 </div>
@@ -196,7 +201,7 @@
         <div class="container">
             <div class="section-header">
                 <h2 class="section-title">✅ Platforms We Support</h2>
-                <p class="section-subtitle">16+ social media platforms and growing</p>
+                <p class="section-subtitle">15+ social media platforms and growing</p>
             </div>
 
             <div class="platforms-grid">
@@ -304,7 +309,34 @@
                         <i class="fab fa-google"></i>
                     </div>
                     <span class="platform-name">Google</span>
-                    <span class="platform-metric">Reviews & Traffic</span>
+                    <span class="platform-metric">SEO & Ads</span>
+                    <div class="platform-pulse"></div>
+                </div>
+
+                <div class="platform-card" data-platform="kick">
+                    <div class="platform-icon">
+                        <i class="fas fa-gamepad"></i>
+                    </div>
+                    <span class="platform-name">Kick</span>
+                    <span class="platform-metric">Streaming & Followers</span>
+                    <div class="platform-pulse"></div>
+                </div>
+
+                <div class="platform-card" data-platform="website-traffic">
+                    <div class="platform-icon">
+                        <i class="fas fa-globe-americas"></i>
+                    </div>
+                    <span class="platform-name">Website Traffic</span>
+                    <span class="platform-metric">Visitors & PageViews</span>
+                    <div class="platform-pulse"></div>
+                </div>
+
+                <div class="platform-card" data-platform="reviews">
+                    <div class="platform-icon">
+                        <i class="fas fa-star"></i>
+                    </div>
+                    <span class="platform-name">Reviews</span>
+                    <span class="platform-metric">Google & Business Reviews</span>
                     <div class="platform-pulse"></div>
                 </div>
             </div>
