🎨 Clean up platform cards and update Twitter to X
- Remove subtitle text from all platform cards for cleaner look
- Change Twitter to X with proper X logo (fa-x-twitter)
- Update floating logo in hero section to use X icon
- Update JavaScript platform mapping for X recognition
- Streamlined platform section design

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
             <div class="floating-logo logo-2"><i class="fab fa-tiktok"></i></div>
             <div class="floating-logo logo-3"><i class="fab fa-youtube"></i></div>
             <div class="floating-logo logo-4"><i class="fab fa-facebook"></i></div>
-            <div class="floating-logo logo-5"><i class="fab fa-twitter"></i></div>
+            <div class="floating-logo logo-5"><i class="fab fa-x-twitter"></i></div>
             <div class="floating-logo logo-6"><i class="fab fa-linkedin"></i></div>
             <div class="floating-logo logo-7"><i class="fab fa-spotify"></i></div>
             <div class="floating-logo logo-8"><i class="fab fa-discord"></i></div>
@@ -210,7 +210,6 @@
                         <i class="fab fa-instagram"></i>
                     </div>
                     <span class="platform-name">Instagram</span>
-                    <span class="platform-metric">Followers & Likes</span>
                     <div class="platform-pulse"></div>
                 </div>
 
@@ -219,7 +218,6 @@
                         <i class="fab fa-tiktok"></i>
                     </div>
                     <span class="platform-name">TikTok</span>
-                    <span class="platform-metric">Views & Followers</span>
                     <div class="platform-pulse"></div>
                 </div>
 
@@ -228,7 +226,6 @@
                         <i class="fab fa-youtube"></i>
                     </div>
                     <span class="platform-name">YouTube</span>
-                    <span class="platform-metric">Subscribers & Views</span>
                     <div class="platform-pulse"></div>
                 </div>
 
@@ -237,16 +234,14 @@
                         <i class="fab fa-facebook"></i>
                     </div>
                     <span class="platform-name">Facebook</span>
-                    <span class="platform-metric">Page Likes</span>
                     <div class="platform-pulse"></div>
                 </div>
 
                 <div class="platform-card" data-platform="twitter">
                     <div class="platform-icon">
-                        <i class="fab fa-twitter"></i>
+                        <i class="fab fa-x-twitter"></i>
                     </div>
-                    <span class="platform-name">Twitter X</span>
-                    <span class="platform-metric">Followers & Retweets</span>
+                    <span class="platform-name">X</span>
                     <div class="platform-pulse"></div>
                 </div>
 
@@ -255,7 +250,6 @@
                         <i class="fab fa-linkedin"></i>
                     </div>
                     <span class="platform-name">LinkedIn</span>
-                    <span class="platform-metric">Connections</span>
                     <div class="platform-pulse"></div>
                 </div>
 
@@ -264,7 +258,6 @@
                         <i class="fab fa-spotify"></i>
                     </div>
                     <span class="platform-name">Spotify</span>
-                    <span class="platform-metric">Plays & Followers</span>
                     <div class="platform-pulse"></div>
                 </div>
 
@@ -273,7 +266,6 @@
                         <i class="fab fa-discord"></i>
                     </div>
                     <span class="platform-name">Discord</span>
-                    <span class="platform-metric">Server Members</span>
                     <div class="platform-pulse"></div>
                 </div>
 
@@ -282,7 +274,6 @@
                         <i class="fab fa-telegram"></i>
                     </div>
                     <span class="platform-name">Telegram</span>
-                    <span class="platform-metric">Channel Subscribers</span>
                     <div class="platform-pulse"></div>
                 </div>
 
@@ -291,7 +282,6 @@
                         <i class="fab fa-twitch"></i>
                     </div>
                     <span class="platform-name">Twitch</span>
-                    <span class="platform-metric">Followers & Views</span>
                     <div class="platform-pulse"></div>
                 </div>
 
@@ -300,7 +290,6 @@
                         <i class="fab fa-snapchat"></i>
                     </div>
                     <span class="platform-name">Snapchat</span>
-                    <span class="platform-metric">Story Views</span>
                     <div class="platform-pulse"></div>
                 </div>
 
@@ -309,7 +298,6 @@
                         <i class="fab fa-google"></i>
                     </div>
                     <span class="platform-name">Google</span>
-                    <span class="platform-metric">SEO & Ads</span>
                     <div class="platform-pulse"></div>
                 </div>
 
@@ -318,7 +306,6 @@
                         <i class="fas fa-gamepad"></i>
                     </div>
                     <span class="platform-name">Kick</span>
-                    <span class="platform-metric">Streaming & Followers</span>
                     <div class="platform-pulse"></div>
                 </div>
 
@@ -327,7 +314,6 @@
                         <i class="fas fa-globe-americas"></i>
                     </div>
                     <span class="platform-name">Website Traffic</span>
-                    <span class="platform-metric">Visitors & PageViews</span>
                     <div class="platform-pulse"></div>
                 </div>
 
@@ -336,7 +322,6 @@
                         <i class="fas fa-star"></i>
                     </div>
                     <span class="platform-name">Reviews</span>
-                    <span class="platform-metric">Google & Business Reviews</span>
                     <div class="platform-pulse"></div>
                 </div>
             </div>
