✨ Fix X logo and redesign header with modern UI
🔧 X Platform Fixes:
- Replace text with actual X symbol (𝕏) for authentic branding
- Update name to 'X (Twitter)' to clarify former Twitter identity
- Add proper black styling with shadow effects
- Update JavaScript detection for new X logo format

🎨 Complete Header Redesign:
- Modern gradient logo with lightning bolt icon
- Animated logo with pulse, shine, and hover effects
- Enhanced navigation with icons for all links
- Special styling for Dashboard and CTA buttons
- Improved typography and spacing throughout
- Professional glass morphism and gradient effects

🚀 Result: Clean, modern header that looks much more professional

--- a/index.html
+++ b/index.html
@@ -32,16 +32,45 @@
         <nav class="navbar">
             <div class="nav-container">
                 <div class="nav-logo">
-                    <span class="logo-icon">🤖</span>
-                    <span class="logo-text">SMM-AI</span>
+                    <div class="logo-wrapper">
+                        <div class="logo-icon-modern">
+                            <div class="logo-gradient">
+                                <i class="fas fa-bolt"></i>
+                            </div>
+                            <div class="logo-pulse"></div>
+                        </div>
+                        <div class="logo-text-modern">
+                            <span class="brand-name">SMM</span>
+                            <span class="brand-separator">•</span>
+                            <span class="brand-ai">AI</span>
+                        </div>
+                    </div>
                 </div>
                 <ul class="nav-menu">
-                    <li><a href="#home" class="nav-link">Home</a></li>
-                    <li><a href="#how-it-works" class="nav-link">How it Works</a></li>
-                    <li><a href="#platforms" class="nav-link">Platforms</a></li>
-                    <li><a href="dashboard.html" class="nav-link">Dashboard</a></li>
-                    <li><a href="login.html" class="nav-link">Sign In</a></li>
-                    <li><a href="register.html" class="nav-link cta-nav">Sign Up</a></li>
+                    <li><a href="#home" class="nav-link">
+                        <i class="fas fa-home nav-icon"></i>
+                        <span>Home</span>
+                    </a></li>
+                    <li><a href="#how-it-works" class="nav-link">
+                        <i class="fas fa-cogs nav-icon"></i>
+                        <span>How it Works</span>
+                    </a></li>
+                    <li><a href="#platforms" class="nav-link">
+                        <i class="fas fa-rocket nav-icon"></i>
+                        <span>Platforms</span>
+                    </a></li>
+                    <li><a href="dashboard.html" class="nav-link nav-link-special">
+                        <i class="fas fa-chart-line nav-icon"></i>
+                        <span>Dashboard</span>
+                    </a></li>
+                    <li><a href="login.html" class="nav-link">
+                        <i class="fas fa-sign-in-alt nav-icon"></i>
+                        <span>Sign In</span>
+                    </a></li>
+                    <li><a href="register.html" class="nav-link cta-nav">
+                        <i class="fas fa-user-plus nav-icon"></i>
+                        <span>Get Started</span>
+                    </a></li>
                 </ul>
                 <div class="hamburger">
                     <span></span>
@@ -60,7 +89,7 @@
             <div class="floating-logo logo-2"><i class="fab fa-tiktok"></i></div>
             <div class="floating-logo logo-3"><i class="fab fa-youtube"></i></div>
             <div class="floating-logo logo-4"><i class="fab fa-facebook"></i></div>
-            <div class="floating-logo logo-5"><i class="fab fa-x-twitter"></i></div>
+            <div class="floating-logo logo-5"><span class="x-logo">𝕏</span></div>
             <div class="floating-logo logo-6"><i class="fab fa-linkedin"></i></div>
             <div class="floating-logo logo-7"><i class="fab fa-spotify"></i></div>
             <div class="floating-logo logo-8"><i class="fab fa-discord"></i></div>
@@ -239,9 +268,9 @@
 
                 <div class="platform-card" data-platform="twitter">
                     <div class="platform-icon">
-                        <i class="fab fa-x-twitter"></i>
+                        <span class="x-logo">𝕏</span>
                     </div>
-                    <span class="platform-name">X</span>
+                    <span class="platform-name">X (Twitter)</span>
                     <div class="platform-pulse"></div>
                 </div>
 
