🎨 Complete professional redesign with dark/light mode toggle
🌈 Professional Color Scheme:
- Replace neon green theme with professional blue/green/purple palette
- Dark theme: Slate backgrounds with blue accents (#3b82f6)
- Light theme: Clean white backgrounds with dark text
- Improved contrast and readability across all components

🌓 Dark/Light Mode Toggle:
- Beautiful animated toggle button in header navigation
- Smooth theme transitions with 0.3s animations
- Persistent theme memory using localStorage
- Keyboard accessibility support (Enter/Space)
- Sun/moon icons with scale/opacity animations

🎯 Updated Components:
- Header: Modern gradient logo with professional colors
- Navigation: Clean styling with subtle hover effects
- Hero section: Refined backgrounds and badge styling
- Platform cards: Professional glass morphism effects
- Floating elements: Updated with new color variables
- CTA buttons: Elegant gradients and shadow effects

🚀 Result: Premium, trustworthy design that appeals to enterprise clients while maintaining modern functionality and user preferences

--- a/index.html
+++ b/index.html
@@ -72,6 +72,17 @@
                         <span>Get Started</span>
                     </a></li>
                 </ul>
+                
+                <!-- Theme Toggle -->
+                <div class="theme-toggle" id="themeToggle">
+                    <div class="toggle-track">
+                        <div class="toggle-thumb">
+                            <i class="fas fa-sun toggle-icon sun-icon"></i>
+                            <i class="fas fa-moon toggle-icon moon-icon"></i>
+                        </div>
+                    </div>
+                </div>
+                
                 <div class="hamburger">
                     <span></span>
                     <span></span>
